# agent-lab

./: .env.example  .gitignore  AGENTS.md  Agent-Lab Stabilization Plan.md  CLAUDE.md  LICENSE  Makefile  PRODUCT.md  README.md  SHARED_CONTEXT.md  pyproject.toml  skills-lock.json
.agent-lab/: PLATFORM.md  PROJECT.md  dogfood-track.json  hooks.example.toml  self_patch_allowlist.txt  tools.yaml.example
.agent-lab/harness/: manifest.json
.agent-lab/liner-exports/: HSIL 안전 게이트 한계 전문가 리뷰_apa.docx  Harness Self-Improvement Loop and Its Stages.csv  INDEX.md  index.json  liner-mindmap-4332218.json  liner-mindmap-4332218.md  liner-mindmap-4332218.txt  liner-mindmap-4332336.json  liner-mindmap-4332336.md  liner-mindmap-4332336.txt  liner-mindmap-4332439.json  liner-mindmap-4332439.md  liner-mindmap-4332439.txt  liner-mindmap-4332523.json  liner-mindmap-4332523.md  liner-mindmap-4332523.txt
.claude/: settings.json
.claude/hooks/: post-edit-prettier.sh  post-edit-ruff.sh  stop-pytest.sh
.claude/rules/: python-backend.md  react-frontend.md
.github/workflows/: ci.yml
.gjc/: HANDOFF.md
.gjc/specs/: deep-interview-agent-lab-divergence-mode.md  deep-interview-index.jsonl  (+4 more)
.omo/: boulder.json
archive/: cleanup_dmg_mounts.sh
artifacts/: clarifier-unify-redteam.txt  divergence-cli-replay.json  divergence-tests.txt  g001-architect-review.md  g001-checkpoint-architect-review.md  g001-checkpoint-qa.txt  g001-repomap-architect-review.md  g001-repomap-qa.txt  g001-stage-routing-qa.txt  g002-antidrift-qa.txt  g002-architect-review.md  g003-antidrift-qa.txt  g003-architect-review.md  partial-retry-tests.txt  pt-dogfood-acceptance.txt  pt-dogfood-fast.txt  pt-g001-acceptance.txt  pt-g001-fast.txt  pt-g002-acceptance.txt  pt-g002-fast.txt  pt-g003-acceptance.txt  pt-g003-fast.txt  pt-g004-acceptance.txt  pt-g004-fast.txt  pt-g005-acceptance.txt  pt-g005-fast.txt  run-lock-recovery-tests.txt  sd-phase1-acceptance.txt  sd-phase1-cli-replay.json  sd-phase1-fast.txt  sd-phase2-acceptance.txt  sd-phase2-fast.txt  sd-phase3-acceptance.txt  sd-phase3-fast.txt  sd-phase3-sig.txt  token-eff-tests.txt  ug-comms-fast-lane.txt  ug-comms-g001-verify.txt  ug-comms-g002-verify.txt  ug-comms-g003-verify.txt  (+19 more)
benchmarks/: task_corpus.v1.json
docs/: 00-GETTING-STARTED.md  01-CONTROLLED-WORKFLOW-SYSTEM.md  02-ui-ux-handoff.md  03-workflow.md  04-multi-agent-room.md  05-room-agent-roles.md  ABSORB-CC-CODEX-2026-07.md  AGENT-OS-MODE-SIMPLIFICATION-PLAN.md  AGENT-PACKAGE-REFACTOR-DESIGN.md  APP.md  ARCHITECTURE.md  CLEANUP-PHASE0-SCOPE-2026-07.md  CLEANUP-SSOT-2026-07.md  CONSOLE-PRODUCTIZATION.md  CONTEXT-PACKAGE-REFACTOR-DESIGN.md  DESIGN-HARNESS-SELF-IMPROVE.md  DESIGN-S1-FEEDBACK-LOOP.md  DESIGN-SYSTEM.md  DESIGN.md  EMERGENCE-BENCH.md  EVAL-CONTRACT.md  EVAL-PROGRAM.md  EVAL-SURFACE-SUPER-SAMPLE-PLAN.md  EVAL-SURFACE-V1-PLAN.md  EXECUTE-WORKTREE-REFORM.md  EXTERNAL-REFS-PLAN.md  EXTERNAL-REFS-TRACEABILITY.md  F5-TRADING-ISOLATION.md  F7-REPO-MAP-COMPACTION-DOGFOOD.md  F8-COST-VISIBILITY.md  FLOW.md  FORK.md  GJC-ENTRY.md  GJC-WORKFLOW-PIPELINE.md  GOAL-LOOP.md  HANDOFF-CODEX-IDE-CSS-CLEANUP.md  HANDOFF-CODEX-IDE-WORKBENCH.md  HOOK-COMMUNICATE-REFORM.md  HUMAN-INBOX-CLAUDE-HANDOFF.md  HUMAN-INBOX.md  (+76 more)
evals/: __init__.py  cases.jsonl  cases.py  graders.py  mock_generation.py  report.py  run_local.py  schema.py  trace_export.py
examples/: week1_smoke.py
multi-ai-icons/: preview.html
scratch/: .gitignore
scripts/: audit_agent_legacy_imports.py  audit_context_legacy_imports.py  audit_inbox_legacy_imports.py  audit_kimi_legacy_imports.py  audit_mission_legacy_imports.py  audit_plan_legacy_imports.py  audit_quant_legacy_imports.py  audit_research_legacy_imports.py  audit_room_legacy_imports.py  audit_run_legacy_imports.py  audit_runtime_imports.py  audit_session_legacy_imports.py  audit_vendor_legacy_imports.py  audit_wisdom_legacy_imports.py  audit_workspace_legacy_imports.py  bench_feature_flags.py  bench_quality_flags.py  build_research_artifact_cards.py  check_bridge_processes.py  check_worktree_orphans.py  context_recipe_shadow_dogfood.py  context_recipe_shadow_real_session_cohort.py  coordination_topology_dogfood_run.py  coordination_topology_report.py  dev.sh  discover_agent_plugins.py  dogfood_live_gates.py  dogfood_progress.py  dogfood_track.py  dogfood_turnpolicy_h5.py  drag_tauri_titlebar.swift  emergence_bench.py  f7_dogfood_report.py  f8_cost_report.py  feedback_report.py  feedback_report_snapshot.py  generate_agent_icons.py  generate_app_icon.py  generate_model_catalog.py  harness_infra_seed.py  (+112 more)
tests/: AGENTS.md  agent_mocks.py  conftest.py  http_server_helpers.py  test_absorb_p1_needs_input_steer.py  test_absorb_wave2_remaining.py  test_activity_lease.py  test_activity_queue_recovery.py  test_activity_recipes.py  test_activity_runtime.py  test_adaptive_efficiency_triggers.py  test_adversarial_gate_fixture.py  test_agent_auth_bootstrap.py  test_agent_availability.py  test_agent_capabilities.py  test_agent_envelope.py  test_agent_health.py  test_agent_hooks_materializer.py  test_agent_mentions.py  test_agent_output_quality.py  test_agent_thread_catalog.py  test_analysis_turn.py  test_antidrift.py  test_api_diagnostics.py  test_api_smoke_fast.py  test_app_config.py  test_auth_runs.py  test_auto_approve_gate.py  test_auto_plan_scribe.py  test_autonomy_inbox.py  test_autonomy_ladder.py  test_autonomy_promotion.py  test_autonomy_promotion_inbox.py  test_autonomy_ui_contract.py  test_background_tasks_api.py  test_backoff_policy.py  test_benchmark_catalog.py  test_bootstrap_model_prefs.py  test_bridge_registry.py  test_bridge_stdout_parser.py  (+435 more)
web/: DESIGN.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/icons/layers/: README.txt
web/src-tauri/permissions/: allow-api-shell.toml
web/src-tauri/src/: lib.rs  main.rs  port_reclaim.rs
workflows/: room.parallel.yaml
(+1521 files in other folders)
