[project]
name = "agent-lab"
version = "0.1.0"
description = "Educational sandbox: topic → multi-role LLM graph → plan.md"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
cursor = ["cursor-sdk>=0.1.0"]
test = ["pytest>=8", "pytest-xdist>=3.5"]

[project.scripts]
agent-lab = "agent_lab.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "live: real Cursor SDK / bridge (requires AGENT_LAB_RUN_LIVE=1 and secrets)",
    "fast: explicit quick unit test (subset marker; most tests are unmarked mock-fast)",
    "integration: slower multi-component or subprocess tests (excluded from make test-fast)",
    "bridge: cursor bridge lifecycle / external probe tests",
]
