[project]
name = "agent-lab"
version = "0.1.0"
description = "Multi-agent developer console: Room discuss, plan workflow, and Human-gated worktree execute with Oracle verification"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2.60",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "mcp>=1.0.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
cursor = ["cursor-sdk>=0.1.0"]
test = ["pytest>=8", "pytest-xdist>=3.5"]
dev = ["ruff>=0.15", "mypy>=1.13"]

[project.scripts]
agent-lab = "agent_lab.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "fast: explicit fast unit/API test; unmarked non-live/non-integration/non-bridge tests are also in make test-fast",
    "integration: mock-only multi-component, subprocess, worktree, or slower API tests owned by make test-integration",
    "bridge: Cursor bridge lifecycle, reconnect, and preflight tests owned by make test-bridge and excluded from make test-fast",
    "live: real CLI/SDK/network verification; requires AGENT_LAB_RUN_LIVE=1 and never runs in PR gates",
    "quant: requires quant-agentic-trading extension (skipped when absent on CI)",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# Default rule set (pyflakes F + pycodestyle E4/E7/E9). E402 is ignored: app and
# test bootstraps legitimately run sys.path / env setup before module imports.
ignore = ["E402"]

[tool.mypy]
# Gradual onboarding: lenient baseline, tighten per-module over time.
# Enforced non-blocking in CI until the core is annotated.
python_version = "3.11"
ignore_missing_imports = true
files = ["src/agent_lab"]

# Wave 3: room package strict ratchet (see scripts/mypy_room_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.room.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Plan package strict ratchet (see scripts/mypy_plan_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.plan.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Session package strict ratchet (see scripts/mypy_session_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.session.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Kimi package strict ratchet (see scripts/mypy_kimi_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.kimi.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Mission package strict ratchet (see scripts/mypy_mission_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.mission.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Agent package strict ratchet (see scripts/mypy_agent_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.agent.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Quant package strict ratchet (see scripts/mypy_quant_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.quant.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Wisdom package strict ratchet (see scripts/mypy_wisdom_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.wisdom.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Inbox package strict ratchet (see scripts/mypy_inbox_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.inbox.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Context package strict ratchet (see scripts/mypy_context_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.context.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Run package strict ratchet (see scripts/mypy_run_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.run.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Workspace package strict ratchet (see scripts/mypy_workspace_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.workspace.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Research package strict ratchet (see scripts/mypy_research_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.research.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Cursor vendor package strict ratchet (see scripts/mypy_vendor_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.cursor.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Codex vendor package strict ratchet (see scripts/mypy_vendor_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.codex.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Claude vendor package strict ratchet (see scripts/mypy_vendor_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.claude.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Local vendor package strict ratchet (see scripts/mypy_vendor_ratchet.py).
[[tool.mypy.overrides]]
module = "agent_lab.local.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
