[package]
name = "agent-lab-app"
version = "0.1.0"
description = "Agent Lab desktop app"
authors = ["yoonjong"]
edition = "2021"

[lib]
name = "agent_lab_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
